--- a/index.html
+++ b/index.html
@@ -12,24 +12,23 @@
       padding: 5;
   }
   body{
-    background-image: url(assests/ht.jpg);
-    background-size: cover;
+    background-image:url(Asset.jpg);
+    background-size: cover; 
+    background-attachment: fixed;  
+   }
 
-  background-attachment: fixed;  
-  
-  }
 </style>
 <body>
-    <div style="background-image: url(assests/hello1.jpg);background-position:center;background-repeat: no-repeat;background-size: cover; width:40% ;height: 200px;margin-left: 25%;
+    <div style="background-image: url();background-position:center;background-repeat: no-repeat;background-size: cover; width:40% ;height: 200px;margin-left: 25%;
     margin-top: 10%;text-align: center;">
         
         <h1 >Login Form </h1>
-        <form action="" style="margin:6%;">
-            <div style="margin-top:10px ;">
-                Username:<input type="text">
+        <form action="" style="margin: 50px;margin: top 20px;color:blue">
+            <div style="margin-top:% ;">
+             Username:<input type="text">
             </div>
 
-            <div style="margin-top: 10px;">
+            <div style="margin-top: 10%;">
               Password: <input type="password" name="" id="">
             </div>
 
