--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     margin-top: 10%;text-align: center;">
         
         <h1 >Login Form </h1>
-        <form action="" style="margin: 50px;margin: top 20px;color:blue">
+        <form action="" style="margin: 50%;margin: top 50%;color:blue">
             <div style="margin-top:% ;">
              Username:<input type="text">
             </div>
