--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     
         
-        <h1 style="font-size:300%;text-align: center;margin-top: 11%;">Login Form </h1>
+        <h1 style="font-size:300%;text-align: center;margin-top: 11%;">Employe Login </h1>
         <form  style="color: black;">
             <div style="margin-top:5%; text-align: center;">
              Username:<input type="text" style="padding: 6px;">
@@ -38,7 +38,7 @@
                 border: 3px solid black;
                 border-radius: 15px;">Login </button>
             </div>
-         <div style="color:rgb(4, 1, 36); text-align: center;margin-top: 20px;font-size: large;">
+         <div style="color:black; text-align: center;margin-top: 20px;font-size:100% ;">
           <a href="index2.html" target="_blank">New? Don't have an account? Sign Up</a>
 
          </div>   
