--- a/index2.html
+++ b/index2.html
@@ -8,31 +8,29 @@
 </head>
 <style>
 body{
-    background-image:url(https://images.unsplash.com/photo-1491466424936-e304919aada7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80);
-    background-image:cover; 
-    background-attachment:fixed;  
-   }
+    background-image:url(https://images.unsplash.com/photo-1648737119359-510d4f551382?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);
+    background-size:cover ;}
 </style>
-<div style="margin-top: 9%;margin-left: 40%;">
+<div style="text-align: center;;">
 <body>
-    <h1> Register Account</h1>
-    <div>
-        <input placeholder="First Name"style="margin-top: 5%;"> </input>
+    <h1 style="margin-top:9%;font-size: 300%;"> Register Account</h1>
+    <div >
+        <input placeholder="First Name"style="margin-top: 5%;padding: 7px;"> </input>
     </div>
     <div>
-        <input placeholder="Last Name" style="margin-top: 2%;"> </input>
+        <input placeholder="Last Name" style="margin-top: 2%;padding: 7px;"> </input>
     </div>
-    <div>
-        <input placeholder="Email Address" style="margin-top: 2%;"></input>
+    <div >
+        <input placeholder="Email Address" type="email" style="margin-top: 2%;padding: 7px;"></input>
     </div>
-    <div>
-        <input placeholder="password" type="password" style="margin-top: 2%;"></input>
+    <div >
+        <input placeholder="password" type="password" style="margin-top: 2%;padding: 7px;"></input>
     </div>
-    <div>
-        <input placeholder="password" type="password" style="margin-top: 2%;"></input>
+    <divs >
+        <input placeholder="password" type="password" style="margin-top: 2%;padding: 7px;"></input>
     </div>
-    <div>
-        Gender: Male <input type="radio"></input> Female <input type="radio"style="margin-top: 2%;"> </input> 
+    <div style="margin-left: 45%;" >
+        Gender: Male <input type="radio"></input> Female <input type="radio"style="margin-top: 4%;padding: 7px;"> </input> 
     </div>
 </body>
 </div>
