--- a/index2.html
+++ b/index2.html
@@ -16,25 +16,26 @@ body{
     <form action="" method="get">
     <h1 style="margin-top:6%;font-size: 300%;"> Register Account</h1>
     <div >
-        <input id="fName" placeholder="First Name"style="margin-top: 3%;padding: 7px;"> </input>
+        
+        <input id="fName" value="" name="fname" placeholder="First Name"  style="margin-top: 3%;padding: 7px;"> </input>
     </div>
     <div>
-        <input id="lName" placeholder="Last Name" style="margin-top: 2%;padding: 7px;"> </input>
+        <input id="lName" placeholder="Last Name" value="" style="margin-top: 2%;padding: 7px; "> </input>
     </div>
     <div >
-        <input id="eAddress" placeholder="Email Address" type="email" style="margin-top: 2%;padding: 7px;"></input>
+        <input id="eAddress" placeholder="Email Address" value=""  type="email" style="margin-top: 2%;padding: 7px; "></input>
     </div>
     <div >
-        <input id="password"   placeholder="password" type="password" style="margin-top: 2%;padding: 7px;"></input>
+        <input id="password"   placeholder="password" value="" type="password" style="margin-top: 2% ; padding: 7px;"></input>
     </div>
     <divs >
-        <input id="cPassword" placeholder="confirm password" type="password" style="margin-top: 2%;padding: 7px;"></input>
+        <input id="cPassword" placeholder="confirm password" value=""  type="password" style="margin-top: 2%;padding: 7px;"></input>
     </div>
     <div style="margin-left: 43%;font-size:large;" >
-        Gender: Male <input id="Male" type="radio" name="Gender"></input> Female <input id="female" name="Gender" type="radio"style="margin-top: 4%;padding: 7px;"> </input> 
+        Gender: Male <input id="Male" type="radio" value="male"  name="Gender"></input> Female <input id="female" name="Gender" value="female" type="radio"style="margin-top: 4%;padding: 7px;"> </input> 
     </div>
     <div style="text-align: center;margin-top: 2%;">
-        <button type="submit" id="Register" value="Register" id="register" style="border-radius:17%; padding: 15px;">Register</button>
+        <button type="submit" id="Register" value="Register"  style="border-radius:17%; padding: 15px;">Register</button>
         <button type="Reset" style="border-radius:17% ;padding: 15px;">Reset</button>
     </div>
 </form>
