--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@ body{
 </style>
 <div style="text-align: center;;">
 <body>
-    <form action="" method="get">
+    <form action="" name="form" method="get">
     <h1 style="margin-top:6%;font-size: 300%;"> Register Account</h1>
     <div >
         
@@ -28,11 +28,11 @@ body{
     <div >
         <input id="password"   placeholder="password" value="" type="password" style="margin-top: 2% ; padding: 7px;"></input>
     </div>
-    <divs >
+    <div>
         <input id="cPassword" placeholder="confirm password" value=""  type="password" style="margin-top: 2%;padding: 7px;"></input>
     </div>
-    <div style="margin-left: 43%;font-size:large;" >
-        Gender: Male <input id="Male" type="radio" value="male"  name="Gender"></input> Female <input id="female" name="Gender" value="female" type="radio"style="margin-top: 4%;padding: 7px;"> </input> 
+    <div style=" margin-top: 2%;font-size:large;" >
+        Gender: Male <input id="Male" type="radio" value="m"  name="Gender"></input> Female <input id="Female" name="Gender" value="f" type="radio"> </input> 
     </div>
     <div style="text-align: center;margin-top: 2%;">
         <button type="submit" id="Register" value="Register"  style="border-radius:17%; padding: 15px;">Register</button>
