--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,8 @@ body{
 </style>
 <div style="text-align: center;;">
 <body>
-    <form action="" name="form" method="get">
     <h1 style="margin-top:6%;font-size: 300%;"> Register Account</h1>
+    <form action="" name="myForm" method="get">
     <div >
         
         <input id="fName" value="" name="fname" placeholder="First Name"  style="margin-top: 3%;padding: 7px;"> </input>
@@ -32,7 +32,7 @@ body{
         <input id="cPassword" placeholder="confirm password" value=""  type="password" style="margin-top: 2%;padding: 7px;"></input>
     </div>
     <div style=" margin-top: 2%;font-size:large;" >
-        Gender: Male <input id="Male" type="radio" value="m"  name="Gender"></input> Female <input id="Female" name="Gender" value="f" type="radio"> </input> 
+        Gender: Male <input id="Male" type="radio" value="m"  name="Gender" ></input> Female <input id="Female" name="Gender" value="f" type="radio"> </input> 
     </div>
     <div style="text-align: center;margin-top: 2%;">
         <button type="submit" id="Register" value="Register"  style="border-radius:17%; padding: 15px;">Register</button>
